--- a/src/components/drop-menu/index.module.scss
+++ b/src/components/drop-menu/index.module.scss
@@ -23,6 +23,7 @@
     visibility: hidden;
     border-radius: 16px;
     box-shadow: 0px 4px 10px 0px rgba(151, 151, 151, 0.25);
+    background-color: $white;
     overflow: hidden;
     transition: top $animation-duration ease-in-out,
       opacity $animation-duration ease-in-out,
