--- a/src/components/modal/index.module.scss
+++ b/src/components/modal/index.module.scss
@@ -20,6 +20,7 @@
   opacity: 0;
   transition: visibility $animation-duration ease-in-out,
     opacity $animation-duration ease-in-out;
+  z-index: 20;
 
   &_open {
     visibility: visible;
